--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 class="titulo">código secreto</h1>
+  <h1 class="titulo">Encripta/Descripta</h1>
 
   <main class="main">
     <section class="form box">
@@ -20,13 +20,25 @@
     </section>
   
     <section class="msg box">
-      <h2 id="">Mensagem criptografada:</h2>
+      Mensagem criptografada:
       <input class="text-input" type="text" id="msg"></input>
       <button class="btn" type="submit" value="copiar" id="btn-copy">Copiar</button>
     </section>
 
   </main>
 
+  <div class="rodape">
+  </br>
+    <b>Challenge Oracle ONE - Lógica de Programação!</b> </br>
+    HTML | CSS| JavaScript</br></br>
+    Desenvolvido por &copy;Conceição Peres</br>
+  </div>
+
+  <div class="contatos">
+    <a href="https://www.linkedin.com/in/conceicao-peres-da-silva" target="_blank"><img src="https://img.shields.io/badge/-LinkedIn-%230077B5?style=for-the-badge&logo=linkedin&logoColor=white" target="_blank"></a>
+    <a href="https://www.github.com/conceicao-peres" target="_blank"><img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" target="_blank"></a> 
+
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
