--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <h1 class="titulo">Encripta/Descripta</h1>
+<body> 
+
+  <div class="titulo">
+    Encripta/Descripta
+  </div>
 
   <main class="main">
     <section class="form box">
-  
       <label for="input-texto">Apenas letras minúsculas, sem acento</label>
       <input class="text-input" type="text" name="input-texto" id="input-texto" placeholder="insira o texto aqui">
       <input class="btn" type="submit" value="criptografar!" id="btn-cripto">
@@ -37,7 +39,6 @@
   <div class="contatos">
     <a href="https://www.linkedin.com/in/conceicao-peres-da-silva" target="_blank"><img src="https://img.shields.io/badge/-LinkedIn-%230077B5?style=for-the-badge&logo=linkedin&logoColor=white" target="_blank"></a>
     <a href="https://www.github.com/conceicao-peres" target="_blank"><img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" target="_blank"></a> 
-
   </div>
   <script src="script.js"></script>
 </body>
