--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   
       <label for="input-texto">Apenas letras minúsculas, sem acento</label>
       <input class="text-input" type="text" name="input-texto" id="input-texto" placeholder="insira o texto aqui">
-      <input class="btn" type="submit" value="criptografar!" id="btn-cripto">
-      <input class="btn" type="submit" value="descriptografar!" id="btn-descripto">
+      <input class="btn" type="submit" value="Encriptar!" id="btn-cripto">
+      <input class="btn" type="submit" value="Descriptar!" id="btn-descripto">
     </section>
   
     <section class="msg box">
