--- a/index.html
+++ b/index.html
@@ -27,18 +27,16 @@
       <button class="btn" type="submit" value="copiar" id="btn-copy">Copiar</button>
     </section>
 
+    
+
   </main>
 
-  <div class="rodape">
-  </br>
-    <b>Challenge Oracle ONE - Lógica de Programação!</b> </br>
-    HTML | CSS| JavaScript</br></br>
-    Desenvolvido por &copy;Conceição Peres</br>
-  </div>
-
-  <div class="contatos">
-    <a href="https://www.linkedin.com/in/conceicao-peres-da-silva" target="_blank"><img src="https://img.shields.io/badge/-LinkedIn-%230077B5?style=for-the-badge&logo=linkedin&logoColor=white" target="_blank"></a>
-    <a href="https://www.github.com/conceicao-peres" target="_blank"><img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" target="_blank"></a> 
+  <footer>
+    <p class="challenge">Challenge Oracle ONE - Lógica de Programação!</p>
+    <p class="challenge">HTML | CSS| JavaScript</p>
+    <p class="copyright">Desenvolvido por &copy;Conceição Peres</p>
+    <a href="https://www.linkedin.com/in/conceicao-peres-da-silva" target="_blank"><img src="icons/linkedin.png" target="_blank"></a>
+    <a href="https://www.github.com/conceicao-peres" target="_blank"><img src="icons/github.png" target="_blank"></a> 
   </div>
   <script src="script.js"></script>
 </body>
