ajuste index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-
   <div class="titulo">
     Encripta/Descripta
   </div>
@@ -21,13 +20,10 @@
       <input class="btn" type="submit" value="Descriptar!" id="btn-descripto">
     </section>
   
-    <section class="msg box">
-      Mensagem criptografada:
+    <section class="msg box">Mensagem criptografada:
       <input class="text-input" type="text" id="msg"></input>
       <button class="btn" type="submit" value="copiar" id="btn-copy">Copiar</button>
     </section>
-
-    
 
   </main>
 
@@ -37,7 +33,7 @@
     <p class="copyright">Desenvolvido por &copy;Conceição Peres</p>
     <a href="https://www.linkedin.com/in/conceicao-peres-da-silva" target="_blank"><img src="icons/linkedin.png" target="_blank"></a>
     <a href="https://www.github.com/conceicao-peres" target="_blank"><img src="icons/github.png" target="_blank"></a> 
-  </div>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
