--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <p class="challenge">Challenge Oracle ONE - Lógica de Programação!</p>
     <p class="challenge">HTML | CSS| JavaScript</p>
     <p class="copyright">Desenvolvido por &copy;Conceição Peres</p>
-    <a href="https://www.linkedin.com/in/conceicao-peres-da-silva" target="_blank"><img src="icons/linkedin.png" target="_blank"></a>
-    <a href="https://www.github.com/conceicao-peres" target="_blank"><img src="icons/github.png" target="_blank"></a> 
+    <a href="https://www.linkedin.com/in/conceicao-peres-da-silva" target="_blank"><img src="https://raw.githubusercontent.com/conceicao-peres/ChallengeOneLogicaBr/main/icons/linkedin.png" target="_blank"></a>
+    <a href="https://www.github.com/conceicao-peres" target="_blank"><img src="https://raw.githubusercontent.com/conceicao-peres/ChallengeOneLogicaBr/main/icons/github.png" target="_blank"></a> 
   </footer>
   <script src="script.js"></script>
 </body>
