--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Encriptador de textos</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body> 
   <div class="titulo">
-    Encripta/Descripta
+    Encriptador de textos
   </div>
 
   <main class="main">
-    <section class="form box">
+    <section class="box">
       <label for="input-texto">Apenas letras minúsculas, sem acento</label>
       <input class="text-input" type="text" name="input-texto" id="input-texto" placeholder="insira o texto aqui">
       <input class="btn" type="submit" value="Encriptar!" id="btn-cripto">
       <input class="btn" type="submit" value="Descriptar!" id="btn-descripto">
     </section>
   
-    <section class="msg box">Mensagem criptografada:
+    <section class="box">Mensagem criptografada:
       <input class="text-input" type="text" id="msg"></input>
       <button class="btn" type="submit" value="copiar" id="btn-copy">Copiar</button>
     </section>
